hello-kube-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: halo-kube
  labels:
    component: web
spec:
  containers:
    - name: halo-kube
      image: ngoprek/halo-kube
      ports:
          - containerPort: 80
