hello-kube-service.yml
apiVersion: v1
kind: Service
metadata:
  name: halo-kube
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: web
